--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@
     width: 100%;
     min-height: 760px;
     height: 100%;
-    box-shadow: 0px 20px 50px #6f6f6f;
+    box-shadow: 0px 50px 50px #6f6f6f;
 }
 
 #landing #landing_left {
@@ -36,8 +36,8 @@
 }
 
 #landing #landing_left div {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 64px;
+    padding-right: 32px;
 }
 
 #landing #landing_left div h2 {}
@@ -86,20 +86,24 @@
 
 
 #about_me {
-    margin-top: 50px;
+    padding: 50px 0;
+    margin: 100px 0;
+    box-shadow: 0px 50px 50px #6f6f6f;
 }
 
 #about_me #title {
-    padding: 10px 32px;
+    padding: 10px 54px;
 }
 
 #about_me #title h1 {
     text-align: center;
     font-size: 60px;
+    border: 1px var(--dark-color) dashed;
+    padding: 16px 10px;
 }
 
 #about_me #main_content {
-    padding: 0px 32px;
+    padding: 0px 64px;
 }
 
 #about_me #main_content div {
@@ -116,7 +120,7 @@
 #about_me #main_content div #name {
     font-weight: bolder;
     padding-right: 10px;
-    font-size: 28px;
+    font-size: 32px;
 }
 
 #about_me #main_content h4 {
@@ -127,6 +131,7 @@
 
 #about_me #statistic {
     display: flex;
+    margin: 0 64px;
 }
 
 #about_me #statistic #statistic_left {
@@ -137,18 +142,27 @@
 }
 
 #about_me #statistic #statistic_left div {
-    height: max-content;
     text-align: center;
-    margin: auto;
+    width: 100%;
+    height: 100%; 
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
 }
 
 #about_me #statistic #statistic_left div h2 {
     color: var(--primary-color);
+    margin: 0;
+    font-weight: bolder;
+    font-size: 64px;
 }
 
 #about_me #statistic #statistic_left div h4 {
     color: var(--light-color);
     font-weight: normal;
+    margin: 0;
 }
 
 
